# mesurador_nivell

./: .gitignore  Executar_Aplicacio.bat  README.md  main.py  main_simulation.py  mostra_mesures.py  pyproject.toml  requirements.txt  sensor_calibration.json  test_do.py  test_ni.py  test_setup.py  test_simulation.py
daq/: __init__.py  acquisition.py  acquisition_with_sim.py  sensor.py
data/: __init__.py  file_handler.py  processor.py
documentacio/: GUIA_CURSOR.md  GUIA_TEST_SIMULACIO.md  GUIA_UV.md  INSTALACIO_ORDINADOR_NOU.md  especificacions.md
gui/: __init__.py  calibration_dialog.py  main_window.py
simulation/: __init__.py  mock_daq.py
utils/: __init__.py  calibration.py  config.py  validators.py
