[project]
name = "mesurador_nivell"
version = "1.0.0"
description = "Sistema d'Adquisició de Nivell d'Aigua per la Universitat de Girona"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "JCM Technologies SAU", email = "info@jcmtechnologies.com" }
]

dependencies = [
    "nidaqmx>=0.6.5",
    "PyQt5>=5.15.0",
    "pyqtgraph>=0.12.0",
    "openpyxl>=3.0.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
